--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "alt": "^0.17.9",
     "alt-container": "^1.0.0",
+    "immutable": "^3.7.5",
     "react": "^0.14.1",
     "react-dom": "^0.14.1"
   }
